[project]
name = "guildsheetupdate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.27.0",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pdftext>=0.6.3",
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.1",
    "surya-ocr>=0.14.7",
]
